Align All Content Correctly

--- a/styles.css
+++ b/styles.css
@@ -1,54 +1,63 @@
-*,
-*:before,
-*:after {
- font-family: 'Quicksand', sans-serif;
-}
-
-h1 {
-display:flex;
-text-align:left;
-margin: 30px;
-justify-content:center;
-align-items:center;
-color:white
-}
-
-h2 {
-display:flex;
-margin-top: 200px;
-margin-bottom: 0 auto;
-justify-content:center;
-color:white;
-height:20px;
-}
-
-
 body {
-    margin: 0;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-around;
+    align-items:center;
+   
+    font-family: 'Quicksand', sans-serif;
     background:linear-gradient(#134d71, #78a7c6,#f7e4bf);
-    height:100vh;
-    }
+    min-height:100vh;
+}
+
+img {
+    width:100px;
+    height:100px;    
+}
 
 .controls {
-    background:white;
-    display: flex;
-    justify-content: center;
-    margin-right:550px;
-    margin-left:550px;
-    padding:20px;
-    border-radius:10px
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+
+
+
 }
 
+.buttons {
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items:center;
 
+    background-color:white;
+    width:500px;
+    height:100px;
+}
 
+.receive-message-button {
+    width:150px;
+    height: 50px;
+}
 
+.yogi-img-box {
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+
+    background-color:white;
+    width:750px;
+    height:300px;
+    border-radius:10px;
+}
+   
 
 
 /*COLORS*/
-
+/* 
 light-yellow - #f7e4bf;
 light-blue - #78a7c6;
 dark-blue - #134d71;
 white - #ffffff;
 black - #000000;
-*/
+*/ 
